inti inSeles core

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+INSALES_APP_NAME = sendpulse_integration
+INSALES_APP_SECRET = 24e791c9bf1b09bf61df5aa477ed76a3
